--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: system-ui;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -29,6 +31,10 @@ input, select, button {
     border: 1px solid #ccc;
 }
 
+select {
+    font-weight: 300;
+}
+
 button {
     border: none;
     background-color: #50a350;
@@ -47,6 +53,7 @@ footer {
     flex-direction: column;
     align-items: center;
     font-size: 14px;
+    font-weight: 300;
     color: #666666;
     margin: 20px 0;
     background-color: #ebebeb;
@@ -56,6 +63,10 @@ footer {
 
 footer a {
     text-decoration: none;
+}
+
+small {
+    font-weight: 300;
 }
 
 #canvasChart {
