--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', system-ui, sans-serif;
 }
 
 body {
@@ -66,7 +66,8 @@ footer a {
 }
 
 small {
-    font-weight: 300;
+    font-size: 15px;
+    font-weight: 400;
 }
 
 #canvasChart {
